--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Weather - Test Suite</title>
-	<link rel="stylesheet" href="css/qunit-1.12.0.css">
+	<link rel="stylesheet" href="css/qunit.css">
 </head>
 <body>
 	<div id="qunit"></div>
